# harness_app_one

./: .env.example  .env.observability.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.docs  Makefile  README.md  READMORE.md  alembic.ini  docker-compose.observability.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  renovate.json  两条ai修复路径.md
.cursor/automations/: README.md  ci-failure-auto-fix.yaml  oncall-auto-fix.yaml  oncall-scale-advisory.yaml  prompt-oncall-auto-fix.txt
.github/: auto-fix-allowlist.txt  dependabot.yml
.github/workflows/: README.md  auto-merge.yml  ci-auto-fix.yml  ci.yml  oncall-dispatch.yml
alembic/: env.py
alembic/versions/: 001_initial_items.py  __init__.py
deploy/k8s/: deployment-hpa.yaml
deploy/nginx/: docs.conf
docs/: index.md
docs/adr/: 0001-record-architecture-decisions.md
docs/architecture/: overview.md
docs/github-workflows/: README.md  auto-merge.md  ci-auto-fix.md  ci.md  oncall-dispatch.md  workflows.md
docs/runbooks/: auto-ops.md  deploy.md
docs/standards/: coding.md  testing.md
docs/templates/: adr-template.md  k8s-upgrade-template.md
observability/: promtail-loki-grafana.md  readme.md
observability/alertmanager/: alertmanager-cursor.example.yml  alertmanager.yml
observability/grafana/provisioning/alerting/: contact-points.yaml  rules.yaml
observability/grafana/provisioning/datasources/: datasources.yml
observability/loki/: loki.yaml
observability/prometheus/: alerts.yml  prometheus.yml
observability/promtail/: promtail.yml
observability/tempo/: tempo.yaml
scripts/: ai_oncall.py  check_doc_freshness.py  cleanup_agent.py  gitleaks_precommit.py  oncall_relay.py  push_to_github.py  test_cursor_webhook.py  test_db_connection.py  test_oncall_relay.py  validate_worktree.sh
src/myapp/: __init__.py  config.py  main.py
src/myapp/api/: __init__.py  health.py  items.py
src/myapp/api/handlers/: __init__.py  exception_handlers.py  response_middleware.py
src/myapp/composition/: __init__.py  dependencies.py
src/myapp/core/: __init__.py
src/myapp/core/services/: external_service.py  health_service.py  item_service.py
src/myapp/db/: __init__.py  models.py  session.py
src/myapp/db/repositories/: item_repository.py
src/myapp/schemas/: __init__.py  item.py  response.py
src/myapp/utils/: __init__.py  http_client.py  logging.py  telemetry.py
tests/: conftest.py
tests/architecture/: test_archon.py  test_layers.py
tests/integration/: test_postgres.py
tests/unit/: test_api.py  test_external_service.py  test_health_service.py  test_item_repository.py  test_item_service.py  test_observability_config.py  test_respx.py  test_utils.py
